Building the HTML and CSS of the page

--- a/index.html
+++ b/index.html
@@ -31,19 +31,49 @@
     </form>
   </div>
   <div class="library" id="output">
-    <div id="first-book">
-
-    </div>
-    <div id="second-book">
-      
-    </div>
-    <div id="third-book">
-
-    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>Saved As:</th>
+          <th>Book Title:</th>
+          <th>Book Author:</th>
+          <th>Book Pages:</th>
+          <th>Read?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>A good book</td>
+          <td>The Tailsman</td>
+          <td>Stephen King</td>
+          <td>788</td>
+          <td>true</td>
+        </tr>
+        <tr>
+          <td>example1</td>
+          <td>example2</td>
+          <td>example3</td>
+          <td>sdlka</td>
+          <td>erg</td>
+        </tr>
+        <tr>
+          <td>example1</td>
+          <td>example2</td>
+          <td>example3</td>
+          <td>greg</td>
+          <td>regwre</td>
+        </tr>
+        <tr>
+          <td>example1</td>
+          <td>example2</td>
+          <td>example3</td>
+          <td>erge</td>
+          <td>ergew</td>
+        </tr>
+      </tbody>
+    </table>
+    
   </div>
-  
-
-
   
   <script src="script.js"></script>
 </body>
