Working on functionality.

--- a/snippets.html
+++ b/snippets.html
@@ -13,3 +13,37 @@
   <div class="book-author">author</div>
   <div class="book-pages">pages</div>
 </div> 
+
+
+
+
+<tbody>
+  <tr>
+    <td>A good book</td>
+    <td>The Tailsman</td>
+    <td>Stephen King</td>
+    <td>788</td>
+    <td>true</td>
+  </tr>
+  <tr>
+    <td>example1</td>
+    <td>example2</td>
+    <td>example3</td>
+    <td>sdlka</td>
+    <td>erg</td>
+  </tr>
+  <tr>
+    <td>example1</td>
+    <td>example2</td>
+    <td>example3</td>
+    <td>greg</td>
+    <td>regwre</td>
+  </tr>
+  <tr>
+    <td>example1</td>
+    <td>example2</td>
+    <td>example3</td>
+    <td>erge</td>
+    <td>ergew</td>
+  </tr>
+</tbody>
