--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   
   <div id="form">
     <form action="">
-      <strong>Save as:</strong> <br>
-      <input type="text" name="saveAs" id="saveAs"> <br>
+      <!-- <strong>Save as:</strong> <br>
+      <input type="text" name="saveAs" id="saveAs"> <br> -->
       <strong>Book Title:</strong> <br>
       <input type="text" name="title" id='title'> <br>
       <strong>Book Author:</strong> <br>
@@ -33,8 +33,8 @@
   <div class="library" id="output">
     <table>
       <thead>
+
         <tr>
-          <th>Saved As:</th>
           <th>Book Title:</th>
           <th>Book Author:</th>
           <th>Book Pages:</th>
@@ -42,34 +42,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>A good book</td>
-          <td>The Tailsman</td>
-          <td>Stephen King</td>
-          <td>788</td>
-          <td>true</td>
-        </tr>
-        <tr>
-          <td>example1</td>
-          <td>example2</td>
-          <td>example3</td>
-          <td>sdlka</td>
-          <td>erg</td>
-        </tr>
-        <tr>
-          <td>example1</td>
-          <td>example2</td>
-          <td>example3</td>
-          <td>greg</td>
-          <td>regwre</td>
-        </tr>
-        <tr>
-          <td>example1</td>
-          <td>example2</td>
-          <td>example3</td>
-          <td>erge</td>
-          <td>ergew</td>
-        </tr>
+        <!--Data Inserted Here-->
       </tbody>
     </table>
     
