--- a/index.html
+++ b/index.html
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Books</title>
-</head>
-<body>
-  <div class="container" id="header">
-    <h1>Welcome to your library. <br>To get started add some<br> books down below!</h1>
-  </div>
-  
-  <div id="form">
-    <form action="">
-      <!-- <strong>Save as:</strong> <br>
-      <input type="text" name="saveAs" id="saveAs"> <br> -->
-      <strong>Book Title:</strong> <br>
-      <input type="text" name="title" id='title'> <br>
-      <strong>Book Author:</strong> <br>
-      <input type="text" name="author" id="author"> <br>
-      <strong>Number of pages:</strong> <br>
-      <input type="number" name="pages" id="pages"> <br>
-      <br> 
-      Have you read it? <br>
-      <input type="checkbox" name="read" id="read">Yes I Have Read It<br>
-      
-      <br>
-      <button type="button" onclick="addBook()">Submit</button>
-    </form>
-  </div>
-  <div class="library" id="output">
-    <table>
-      <thead>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Books</title>
+	</head>
+	<body>
+		<div class="container" id="header">
+			<h1>
+				Welcome to your library. <br />To get started add some<br />
+				books down below!
+			</h1>
+		</div>
 
-        <tr>
-          <th>Book Title:</th>
-          <th>Book Author:</th>
-          <th>Book Pages:</th>
-          <th>Read?</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!--Data Inserted Here-->
-      </tbody>
-    </table>
-    
-  </div>
-  
-  <script src="script.js"></script>
-</body>
+		<div id="form">
+			<form action="">
+				<strong>Save as:</strong> <br />
+				<input type="text" name="saveAs" id="saveAs" /> <br />
+				<strong>Book Title:</strong> <br />
+				<input type="text" name="title" id="title" /> <br />
+				<strong>Book Author:</strong> <br />
+				<input type="text" name="author" id="author" /> <br />
+				<strong>Number of pages:</strong> <br />
+				<input type="number" name="pages" id="pages" /> <br />
+				<br />
+				Have you read it? <br />
+				<input type="checkbox" name="read" id="read" />Yes I Have Read It<br />
+				<br />
+				<button type="button" onclick="addBook()">Submit</button>
+			</form>
+		</div>
+		<div class="library" id="output">
+			<!--This is where JS will create the card divs-->
+		</div>
+
+		<script src="script.js"></script>
+	</body>
 </html>
